# project-secure-chat

./: .hgignore  BrainStorming.md  CMakeLists.txt  Compilazione.md  Makefile.am  ProjectHome.md  README  Requisiti.md  build.sh  clean.sh  client  config.h  configure.ac  debug.sh  debugger.sh  psc.gdb  pschat-client.conf  pschat-server.conf  revision.h.in.cmake  server
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/compiler/gcc/: settings.cmake
cmake/compiler/icc/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: FindGTK2.cmake  FindGTK3.cmake  FindGlib.cmake  FindOpenSSL.cmake  FindTinyXML.cmake
cmake/platform/unix/: settings.cmake
cmake/platform/win/: settings.cmake
configs/: psc-client.conf.dist  psc-server.conf.dist
data/: client.pem  client.pub  database.sqlite  database.sqlite.dist  database_empty.sqlite  dump.sql  generate_db.sh  generate_keys.sh  logo.xcf  psc-client.conf.dist  psc-server.conf.dist  server.pem  server.pub
data/keys/: client_gufo.pem  client_gufo.pub  client_paradox.pem  client_paradox.pub  client_viralex.pem  client_viralex.pub  server.pem  server.pub
doc/: 1-introduzione.tex  2-progettazione.tex  doc.tex
src/: CMakeLists.txt
src/client/: CMakeLists.txt  c.sh  client-config.cpp  client-config.h  client-core.cpp  client-core.h  config-client.cpp  config-client.h  gui.cpp  gui.h  main.cpp  makefile  xml.cpp  xml.h
src/client/command/: chat-handler.cpp  chat-handler.h  chat_handler.cpp
src/client/execution/: functions-client.cpp  functions-client.h
src/client/networking/: opcode.cpp  opcode.h  socket-client.cpp  socket-client.h  test.cpp
src/client/networking/socket-client_test/: socket-client_test.cpp
src/client/session/: session.cpp  session.h
src/client/test_gui/: README  gui  gui.cpp
src/server/: CMakeLists.txt  config-server.cpp  config-server.h  main.cpp  server-config.cpp  server-config.h  server-core.cpp  server-core.h
src/server/channel/: channel-manager.cpp  channel-manager.h  channel-updater.cpp  channel-updater.h  channel.cpp  channel.h
src/server/command/: chat_handler.cpp  chat_handler.h
src/server/database/: database-manager.cpp  database-manager.h
src/server/execution/: command-manager-server.cpp  command-manager-server.h  execution.cpp  execution.h  functions-server.cpp  functions-server.h
src/server/networking/: network-manager.cpp  network-manager.h  opcode.cpp  opcode.h  packetfilter.h  socket-server.cpp  socket-server.h  socket-server_test.cpp
src/server/networking/packet/: opcode.cpp  opcode.h  packetfilter.cpp  packetfilter.h
src/server/networking/socket/: socket-server.cpp  socket-server.h
src/server/networking/socket-server_test/: socket-server_test.cpp
src/server/session/: cell.cpp  cell.h  execution-threads.cpp  execution-threads.h  network-threads.cpp  network-threads.h  queue.h  scheduling-engine.h  session-manager.cpp  session-manager.h  session.cpp  session.h
src/server/threading/: execution-threads.cpp  execution-threads.h  method-request.h  scheduling-engine.cpp  scheduling-engine.h  sscheduling-engine.h
src/server/threading/net-threads/: network-threads.h
src/shared/: CMakeLists.txt  callback.h  command.cpp  command.h  common.cpp  common.h  config.cpp  config.h  exception.cpp  exception.h  singleton.h  typedefs.h  xml-message.cpp  xml-message.h
src/shared/callback/: callback_test.cpp
src/shared/commands/: command.h  function.h
src/shared/crypto/: base64.cpp  base64.h  crypto.cpp  crypto.h
src/shared/cryptography/: crypto.cpp  crypto.h
src/shared/execution/: command-manager.cpp  command-manager.h  command.cpp  command.h  execute.cpp  execute.h  execution.cpp  execution.h  functions.cpp  functions.h
src/shared/networking/: bytebuffer.h  opcode.cpp  opcode.h  opcodes.cpp  packet.cpp  packet.h  packetfilter.cpp  packetfilter.h  socket-base.cpp  socket-base.h  socket-exception.cpp  socket-exception.h  socket.cpp  socket.h
src/shared/networking/old_packet/: packet.h
src/shared/networking/packet/: packet.h
src/shared/networking/packet/old_packet/: byteconverter.h
src/shared/networks/: accept_socket.h  client_socket.cpp  client_socket.h  connect_socket.h  server_socket.cpp  server_socket.h  socket.cpp  socket.h
src/shared/packets/: bytebuffer.h
src/shared/queues/: lock_queue.h  mt_queue.h
src/shared/session/: sessionbase.cpp  sessionbase.h  user-session.cpp  user-session.h
src/shared/tests/: callback_test.cpp
src/shared/threading/: lock.h  mutex.h  semaphore.h  thread.cpp  thread.h  thread_base.h
src/shared/usersession/: usersession.cpp
src/shared/utilities/: file.cpp  file.h  time.cpp  time.h
src/shared/utility/: bytebuffer.h  byteconverter.h  callback.h  config.cpp  config.h  counted_ptr.h  file.cpp  file.h  lockqueue.h  logger.cpp  logger.h  mt_queue.h  singleton.h  time.cpp  time.h  timer.cpp  timer.h
src/shared/utility/queues/: lock_queue.h  mt_queue.h
src/test_gui/: gui.c  gui.cpp  makefile
